--- a/index.html
+++ b/index.html
@@ -1,1 +1,20 @@
-ndwzlwtmsi
+<html lang="en">
+ <head>
+  <meta charset="utf-8"/>
+  <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
+  <title>
+   Document
+  </title>
+ </head>
+ <body>
+  <h1>
+   My BLOG Home page
+  </h1>
+  <a href="index.html">
+   Home
+  </a>
+  <a href="content\3.html">
+   3
+  </a>
+ </body>
+</html>
